# fumi

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
module/: default.nix
src/: config.rs  daemon.rs  discord.rs  main.rs  matrix.rs  mcp.rs  protocol.rs  render.rs  scripting.rs  slack.rs
